save user to DB, add default habits to new User,added API habit
