# docs/swagger.yaml
@@ -1,4 +1,52 @@
 definitions:
+  habits.Habit:
+    properties:
+      color:
+        type: string
+      created_at:
+        type: string
+      days_of_week:
+        type: string
+      description:
+        type: string
+      group_id:
+        description: UUID в виде строки
+        type: string
+      icon:
+        type: string
+      id:
+        type: integer
+      is_active:
+        type: boolean
+      is_default:
+        type: boolean
+      name:
+        type: string
+      repeat_type:
+        description: '"daily" или "weekly"'
+        type: string
+      user_id:
+        type: integer
+      version:
+        type: integer
+    type: object
+  habits.HabitDto:
+    properties:
+      color:
+        type: string
+      days_of_week:
+        type: string
+      desc:
+        type: string
+      icon:
+        type: string
+      id:
+        type: integer
+      name:
+        type: string
+      repeat_type:
+        type: string
+    type: object
   users.User:
     properties:
       createAt:
@@ -12,17 +60,6 @@ definitions:
       userName:
         type: string
     type: object
-  users.UserTGDTO:
-    properties:
-      firstName:
-        type: string
-      lastName:
-        type: string
-      userId:
-        type: integer
-      userName:
-        type: string
-    type: object
 host: localhost:8080
 info:
   contact: {}
@@ -30,18 +67,10 @@ info:
   title: HabitMuse API
   version: "1.0"
 paths:
-  /api/user/registration:
-    post:
+  /api/user/:
+    get:
       consumes:
       - application/json
-      description: Создает нового пользователя
-      parameters:
-      - description: Информация о пользователе
-        in: body
-        name: user
-        required: true
-        schema:
-          $ref: '#/definitions/users.UserTGDTO'
       produces:
       - application/json
       responses:
@@ -49,7 +78,68 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/users.User'
-      summary: Регистрация пользователя
+      summary: Получить Пользователя из контекста
       tags:
       - users
+  /habits:
+    post:
+      consumes:
+      - application/json
+      description: Creates a new habit for the authenticated user
+      parameters:
+      - description: Habit data
+        in: body
+        name: habit
+        required: true
+        schema:
+          $ref: '#/definitions/habits.HabitDto'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/habits.Habit'
+        "400":
+          description: Invalid input
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal server error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - ApiKeyAuth: []
+      summary: Create a new habit and Update
+      tags:
+      - habits
+  /habits/habit/{id}:
+    get:
+      description: Retrieves a habit by its ID
+      parameters:
+      - description: Habit ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/habits.Habit'
+        "404":
+          description: Habit not found or invalid ID
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Get habit by ID
+      tags:
+      - habits
 swagger: "2.0"
