# internal/habits/handler.go
@@ -1,9 +1,13 @@
 package habits
 
 import (
+	"HabitMuse/internal/constants"
+	"HabitMuse/internal/users"
 	"fmt"
 	"github.com/gin-gonic/gin"
+	"log"
 	"net/http"
+	"strconv"
 )
 
 type Handler struct {
@@ -16,34 +20,75 @@ func NewHandler(s Service) *Handler {
 
 func RegisterRoutes(router *gin.Engine, h *Handler) {
 	fmt.Println("RegisterRoutes")
-	api := router.Group("/api")
+	api := router.Group("/habits")
 	{
-		api.GET("/habits", h.GetHabits)
+		api.POST("/", h.CreateHabit)
+		api.GET("/:date", h.GetByDate)
+		api.GET("/habit/:id", h.GetHabitById)
 	}
 }
 
-func (h *Handler) GetHabits(c *gin.Context) {
-	fmt.Println("GET HABITS CTX = ", c.Request.Context())
-	//userId := c.MustGet("user_id").(int64)
-	//habits, err := h.service.GetHabitsByUser(userId)
-	//if err != nil {
-	//	c.JSON(http.StatusInternalServerError, gin.H{"error": "could not get habits"})
-	//	return
-	//}
-	//c.JSON(http.StatusOK, habits)
-	c.JSON(http.StatusOK, "Good")
-}
-
+// CreateHabit godoc
+// @Summary      Create a new habit and Update
+// @Description  Creates a new habit for the authenticated user
+// @Tags         habits
+// @Accept       json
+// @Produce      json
+// @Param        habit  body      HabitDto  true  "Habit data"
+// @Success      201    {object}  Habit
+// @Failure      400    {object}  map[string]string  "Invalid input"
+// @Failure      500    {object}  map[string]string  "Internal server error"
+// @Security     ApiKeyAuth
+// @Router       /habits [post]
 func (h *Handler) CreateHabit(c *gin.Context) {
-	var habit Habit
-	if err := c.ShouldBindJSON(&habit); err != nil {
+	var dto *HabitDto
+	if err := c.ShouldBindJSON(&dto); err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": "invalid input"})
 		return
 	}
-	created, err := h.service.CreateNewHabit(habit)
+	user := getUserByCtx(c)
+	created, err := h.service.CreateHabit(dto, user)
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": "could not create habit"})
 		return
 	}
 	c.JSON(http.StatusCreated, created)
+}
+
+// GetHabitById godoc
+// @Summary      Get habit by ID
+// @Description  Retrieves a habit by its ID
+// @Tags         habits
+// @Produce      json
+// @Param        id   path      int64  true  "Habit ID"
+// @Success      200  {object}  Habit
+// @Failure      404  {object}  map[string]string  "Habit not found or invalid ID"
+// @Router       /habits/habit/{id} [get]
+func (h *Handler) GetHabitById(c *gin.Context) {
+	habitId, err := strconv.ParseInt(c.Param("id"), 10, 64)
+	if err != nil {
+		c.AbortWithStatusJSON(http.StatusNotFound, gin.H{"error": "invalid habitId"})
+		return
+	}
+	habit := h.service.GetHabitById(habitId)
+	c.JSON(http.StatusOK, habit)
+}
+
+func (h *Handler) GetByDate(c *gin.Context) {
+
+}
+
+func getUserByCtx(c *gin.Context) *users.User {
+	rawUser, exists := c.Get(constants.UserContextKey)
+	if !exists {
+		log.Println("user not found in context")
+		return nil
+	}
+
+	user, ok := rawUser.(*users.User)
+	if !ok {
+		log.Println("failed to cast user from context")
+		return nil
+	}
+	return user
 }
